Resolved clipping with lazy button img. selections. Completed integration. Ready to ship.

--- a/~_css/main.css
+++ b/~_css/main.css
@@ -117,7 +117,9 @@ main {
 	background-color: var(--printBlue);
 }
 .showcaseButton img {
+	object-fit: cover;
 	width: 100%;
+	height: 100%;
 }
 
 
